--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,206 +1,86 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load mtp_common %}
-{% load bank_admin %}
 
 {% block page_title %}{% trans 'Download files' %} – {{ block.super }}{% endblock %}
 
 {% block content %}
   {% notification_banners request 'bankadmin_dashboard' %}
 
-  <div class="mtp-compact">
-    {% get_preceding_workdays 5 offset=1 as preceding_days %}
+  <header>
+    <h1 class="govuk-heading-xl">{% trans 'Download files' %}</h1>
+  </header>
 
-    <header>
-      <h1 class="govuk-heading-xl">{% trans 'Download files' %}</h1>
-    </header>
+  {% if missed_refunds or missed_adi_journals or missed_statements or missed_disbursements %}
+    <div class="mtp-missed-downloads-box">
+      <h3 class="govuk-heading-m">{% trans 'You may have forgotten to download these files' %}</h3>
+      <p><strong>
+        {% trans 'Please download and process them before you move on to the next.' %}
+      </strong></p>
 
-    {% if missed_refunds or missed_adi_journals or missed_statements or missed_disbursements %}
-      <div class="mtp-missed-downloads-box">
-        <h3 class="govuk-heading-m">{% trans 'You may have forgotten to download these files' %}</h3>
-        <p><strong>
-          {% trans 'Please download and process them before you move on to the next.' %}
-        </strong></p>
+      {% if missed_refunds %}
+      <p>
+        {% trans 'Refunds for:' %}
+        {% for refund_date in missed_refunds %}
+          <a href="{% url 'bank_admin:download_refund_file' %}?receipt_date={{ refund_date|date:'Y-m-d' }}">{{ refund_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </p>
+      {% endif %}
 
-        {% if missed_refunds %}
-        <p>
-          {% trans 'Refunds for:' %}
-          {% for refund_date in missed_refunds %}
-            <a href="{% url 'bank_admin:download_refund_file' %}?receipt_date={{ refund_date|date:'Y-m-d' }}">{{ refund_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
-          {% endfor %}
-        </p>
-        {% endif %}
+      {% if missed_adi_journals %}
+      <p>
+        {% trans 'ADI journals for:' %}
+        {% for journal_date in missed_adi_journals %}
+          <a href="{% url 'bank_admin:download_adi_journal' %}?receipt_date={{ journal_date|date:'Y-m-d' }}">{{ journal_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </p>
+      {% endif %}
 
-        {% if missed_adi_journals %}
-        <p>
-          {% trans 'ADI journals for:' %}
-          {% for journal_date in missed_adi_journals %}
-            <a href="{% url 'bank_admin:download_adi_journal' %}?receipt_date={{ journal_date|date:'Y-m-d' }}">{{ journal_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
-          {% endfor %}
-        </p>
-        {% endif %}
+      {% if missed_statements %}
+      <p>
+        {% trans 'Bank statements for:' %}
+        {% for statement_date in missed_statements %}
+          <a href="{% url 'bank_admin:download_bank_statement' %}?receipt_date={{ statement_date|date:'Y-m-d' }}">{{ statement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </p>
+      {% endif %}
 
-        {% if missed_statements %}
-        <p>
-          {% trans 'Bank statements for:' %}
-          {% for statement_date in missed_statements %}
-            <a href="{% url 'bank_admin:download_bank_statement' %}?receipt_date={{ statement_date|date:'Y-m-d' }}">{{ statement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
-          {% endfor %}
-        </p>
-        {% endif %}
+      {% if missed_disbursements %}
+      <p>
+        {% trans 'Disbursements for:' %}
+        {% for disbursement_date in missed_disbursements %}
+          <a href="{% url 'bank_admin:download_disbursements' %}?receipt_date={{ disbursement_date|date:'Y-m-d' }}">{{ disbursement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </p>
+      {% endif %}
+    </div>
+  {% endif %}
 
-        {% if missed_disbursements %}
-        <p>
-          {% trans 'Disbursements for:' %}
-          {% for disbursement_date in missed_disbursements %}
-            <a href="{% url 'bank_admin:download_disbursements' %}?receipt_date={{ disbursement_date|date:'Y-m-d' }}">{{ disbursement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
-          {% endfor %}
-        </p>
-        {% endif %}
-      </div>
+  {% if perms.transaction.view_bank_details_transaction or perms.credit.view_any_credit %}
+    <div class="govuk-grid-row">
+      {% if perms.transaction.view_bank_details_transaction %}
+        {% url 'bank_admin:download_refund_file' as base_download_url %}
+        {% include 'bank_admin/downloads.html' with heading=_('Access Pay file – refunds') previous_heading=_('Previous Access Pay refund files') id='ap-refunds' %}
+      {% endif %}
+
+      {% if perms.credit.view_any_credit %}
+        {% url 'bank_admin:download_adi_journal' as base_download_url %}
+        {% include 'bank_admin/downloads.html' with heading=_('ADI Journal') previous_heading=_('Previous ADI Journals') id='adi-journals' %}
+      {% endif %}
+    </div>
+
+    {% include 'govuk-frontend/components/section-break.html' with visible=True size='l' %}
+  {% endif %}
+
+  <div class="govuk-grid-row">
+    {% if perms.transaction.view_transaction %}
+      {% url 'bank_admin:download_bank_statement' as base_download_url %}
+      {% include 'bank_admin/downloads.html' with heading=_('Bank statement') previous_heading=_('Previous bank statements') id='statements' %}
     {% endif %}
 
-    <div class="container">
-
-      <div class="mtp-compact__row-1">
-        {% if perms.transaction.view_bank_details_transaction %}
-        <section>
-          <h2 class="govuk-heading-s">{% trans 'Access Pay file – refunds' %}</h2>
-          {% url 'bank_admin:download_refund_file' as base_download_url %}
-          {% for day in preceding_days %}
-            {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download file for {{ date }}{% endblocktrans %}
-
-            {% if forloop.first %}
-          <div class="mtp-filelink">
-              <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-              {{ download_label }}
-              </a>
-          </div>
-
-          <p>
-            <a class="mtp-disclosure" href="#" aria-controls="previous-ap-refunds" aria-expanded="false" role="button" data-analytics="pageview,/-help_open/previous-ap-refunds/">
-              <span></span>{% trans 'Previous AccessPay refund files' %}
-            </a>
-          </p>
-          <div id="previous-ap-refunds" class="mtp-disclosure__contents panel panel-border-narrow">
-            <ul class="list list-bullet">
-            {% else %}
-              <li>
-                <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-                    {{ download_label }}
-                </a>
-              </li>
-            {% endif %}
-          {% endfor %}
-            </ul>
-          </div>
-        </section>
-        {% endif %}
-
-        {% if perms.credit.view_any_credit %}
-        <section>
-          <h2 class="govuk-heading-s">{% trans 'ADI Journal' %}</h2>
-          {% url 'bank_admin:download_adi_journal' as base_download_url %}
-          {% for day in preceding_days %}
-            {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
-
-            {% if forloop.first %}
-          <div class="mtp-filelink">
-            <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-            {{ download_label }}
-            </a>
-          </div>
-
-          <p>
-            <a class="mtp-disclosure" href="#" aria-controls="previous-adi-journals" aria-expanded="false" role="button" data-analytics="pageview,/-help_open/previous-adi-journals/">
-              <span></span>{% trans 'Previous ADI Journals' %}
-            </a>
-          </p>
-          <div id="previous-adi-journals" class="mtp-disclosure__contents panel panel-border-narrow">
-            <ul class="list list-bullet">
-            {% else %}
-              <li>
-                <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-                  {{ download_label }}
-                </a>
-              </li>
-            {% endif %}
-          {% endfor %}
-            </ul>
-          </div>
-        </section>
-        {% endif %}
-      </div>
-
-      <div class="mtp-compact__row-2">
-        {% if perms.transaction.view_transaction %}
-        <section>
-          <h2 class="govuk-heading-s">{% trans 'Bank statement' %}</h2>
-          {% url 'bank_admin:download_bank_statement' as base_download_url %}
-          {% for day in preceding_days %}
-            {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
-
-            {% if forloop.first %}
-          <div class="mtp-filelink">
-            <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-            {{ download_label }}
-            </a>
-          </div>
-
-          <p>
-            <a class="mtp-disclosure" href="#" aria-controls="previous-statements" aria-expanded="false" role="button" data-analytics="pageview,/-help_open/previous-statements/">
-              <span></span>{% trans 'Previous bank statements' %}
-            </a>
-          </p>
-          <div id="previous-statements" class="mtp-disclosure__contents panel panel-border-narrow">
-            <ul class="list list-bullet">
-              {% else %}
-              <li>
-                <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-                  {{ download_label }}
-                </a>
-              </li>
-              {% endif %}
-          {% endfor %}
-            </ul>
-          </div>
-        </section>
-        {% endif %}
-
-        {% if perms.disbursement.view_disbursement %}
-        <section>
-          <h2 class="govuk-heading-s">{% trans 'Disbursements' %}</h2>
-          {% url 'bank_admin:download_disbursements' as base_download_url %}
-          {% for day in preceding_days %}
-            {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download disbursements for {{ date }}{% endblocktrans %}
-
-            {% if forloop.first %}
-          <div class="mtp-filelink">
-            <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-            {{ download_label }}
-            </a>
-          </div>
-
-          <p>
-            <a class="mtp-disclosure" href="#" aria-controls="previous-disbursements" aria-expanded="false" role="button" data-analytics="pageview,/-help_open/previous-adi-journals/">
-              <span></span>{% trans 'Previous Disbursements' %}
-            </a>
-          </p>
-          <div id="previous-disbursements" class="mtp-disclosure__contents panel panel-border-narrow">
-            <ul class="list list-bullet">
-            {% else %}
-              <li>
-                <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-                  {{ download_label }}
-                </a>
-              </li>
-            {% endif %}
-          {% endfor %}
-            </ul>
-          </div>
-        </section>
-        {% endif %}
-      </div>
-    </div>
+    {% if perms.disbursement.view_disbursement %}
+      {% url 'bank_admin:download_disbursements' as base_download_url %}
+      {% include 'bank_admin/downloads.html' with heading=_('Disbursements') previous_heading=_('Previous Disbursements') id='disbursements' %}
+    {% endif %}
   </div>
 {% endblock %}
