WIP Use internal site branding and header links

--- a/mtp_bank_admin/assets-src/app.scss
+++ b/mtp_bank_admin/assets-src/app.scss
@@ -1,5 +1,6 @@
 // mtp-common base components
 @import 'mtp/base';
+@import 'mtp/internal';
 
 // mtp-common extra components
 @import 'mtp/components/mailcheck-warning';
