Start using new base template from mtp-common …leaving most styles broken and scripts non-functional.
This also replaces a range of template blocks and classes.

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -5,7 +5,7 @@
 
 {% block page_title %}{% trans 'Download files' %} – {{ block.super }}{% endblock %}
 
-{% block inner_content %}
+{% block content %}
   {% notifications_box request 'bankadmin_dashboard' %}
 
   <div class="mtp-compact">
