--- a/mtp_bank_admin/templates/mtp_auth/login.html
+++ b/mtp_bank_admin/templates/mtp_auth/login.html
@@ -6,7 +6,7 @@
   {% trans 'Bank admin' %}
 {% endblock %}
 
-{% block inner_content %}
+{% block content %}
   {% notifications_box request 'bankadmin_login' %}
   {{ block.super }}
 {% endblock %}
