--- a/mtp_bank_admin/templates/bank_admin/emails/private-estate.html
+++ b/mtp_bank_admin/templates/bank_admin/emails/private-estate.html
@@ -1,7 +1,7 @@
 {% extends 'mtp_common/email_base.html' %}
 {% load i18n %}
 
-{% block inner_content %}
+{% block content %}
   <p>
     {% blocktrans trimmed with date=date|date:'d/m/Y' %}
       The attached CSV file lists the credits received for {{ prison_name }} on {{ date }} from ‘Send money to someone in prison’.
