Use new notification banner component

--- a/mtp_bank_admin/templates/mtp_auth/login.html
+++ b/mtp_bank_admin/templates/mtp_auth/login.html
@@ -7,6 +7,6 @@
 {% endblock %}
 
 {% block content %}
-  {% notifications_box request 'bankadmin_login' %}
+  {% notification_banners request 'bankadmin_login' %}
   {{ block.super }}
 {% endblock %}
