--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -6,7 +6,7 @@
 {% block page_title %}{% trans 'Download files' %} – {{ block.super }}{% endblock %}
 
 {% block content %}
-  {% notifications_box request 'bankadmin_dashboard' %}
+  {% notification_banners request 'bankadmin_dashboard' %}
 
   <div class="mtp-compact">
     {% get_preceding_workdays 5 offset=1 as preceding_days %}
@@ -14,8 +14,6 @@
     <header>
       <h1 class="heading-xlarge">{% trans 'Download files' %}</h1>
     </header>
-
-    {% include 'mtp_common/includes/message_box.html' %}
 
     {% if missed_refunds or missed_adi_journals or missed_statements or missed_disbursements %}
       <div class="mtp-missed-downloads-box">
