Rename bank admin template tags module …to make it clear that it's specific to this app

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% load dates %}
 {% load mtp_common %}
+{% load bank_admin %}
 
 {% block page_title %}{% trans 'Download files' %} – {{ block.super }}{% endblock %}
 
