Use staff app components from mtp-common

--- a/mtp_bank_admin/assets-src/app.scss
+++ b/mtp_bank_admin/assets-src/app.scss
@@ -1,2 +1,4 @@
 // mtp-common components
 @import 'mtp_common';
+@import 'mtp_common/staff-app';
+@import 'mtp_common/components/mailcheck-warning';
