Add a link out to the staff user satisfaction survey …placed just above the footer

--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -2,9 +2,20 @@
 {% load i18n %}
 {% load mtp_common %}
 
-
 {% block page_title %}{% trans 'Bank admin' %}{% endblock %}
 
+{% block footer %}
+  {% if request.user.is_authenticated and footer_feedback_link %}
+    {% captureoutput as feedback_link %}
+      <a href="{{ footer_feedback_link }}" target="_blank">
+        {% trans 'Give feedback on Bank admin (opens in a new tab)' %}
+      </a>
+    {% endcaptureoutput %}
+    {% include 'mtp_common/components/footer-feedback.html' with content=feedback_link %}
+  {% endif %}
+
+  {{ block.super }}
+{% endblock %}
 
 {% block body_end %}
   <script src="{% url 'js-i18n' %}?{{ APP_GIT_COMMIT_SHORT }}"></script>
